# ompa

./: .gitignore  CLAUDE.md  CLAUDE_CODE_PROMPT.md  LICENSE  PUSH.md  README.md  RELEASE.md  SECURITY_AUDIT.md  demo.cast  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
agent_memory/: __init__.py  classifier.py  cli.py  core.py  hooks.py  semantic.py  vault.py
examples/simple_vault/: demo.py
ompa/: __init__.py  __main__.py  classifier.py  cli.py  config.py  core.py  hooks.py  knowledge_graph.py  mcp_server.py  palace.py  semantic.py  vault.py
tests/: test_agnostic_obsidian.py  test_ompa.py
