[project]
name = "ompa"
version = "0.1.2"
description = "Universal AI agent memory layer — vault + palace + temporal knowledge graph"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Micap AI", email = "info@micap.ai"},
]
keywords = [
    "ai", "memory", "agent", "llm", "rag", "vector-database",
    "mcp", "claude", "openclaw", "coddex", "gemini-cli",
    "knowledge-graph", "temporal", "obsidian", "vault",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=1.24.0",
    "sentence-transformers>=2.2.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "python-frontmatter>=1.1.0",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0", "black>=23.0.0", "ruff>=0.1.0"]
mcp = []  # MCP protocol built-in
all = [
    "chromadb>=0.4.0",
    "numpy>=1.24.0",
    "sentence-transformers>=2.2.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "python-frontmatter>=1.1.0",
    "watchdog>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/micap-ai/ompa"
Repository = "https://github.com/micap-ai/ompa"
Documentation = "https://github.com/micap-ai/ompa#readme"
"Bug Tracker" = "https://github.com/micap-ai/ompa/issues"

[project.scripts]
ao = "ompa.cli:main"
ao-mcp = "ompa.mcp_server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ompa*"]
exclude = ["tests*", "examples*", "docs*"]
