[project]
name = "ompa"
version = "0.3.1"
description = "Universal AI agent memory layer — vault + palace + temporal knowledge graph"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Micap AI", email = "info@micap.ai"},
]
keywords = [
    "ai", "agent", "memory", "obsidian", "knowledge-graph",
    "mcp", "claude", "llm", "rag", "semantic-search"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "python-frontmatter>=1.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0", "black>=23.0.0", "ruff>=0.1.0"]
semantic = [
    "numpy>=1.24.0",
    "sentence-transformers>=2.2.0",
]
all = [
    "ompa[semantic]",
]

[project.urls]
Homepage = "https://github.com/jmiaie/ompa"
Repository = "https://github.com/jmiaie/ompa"
Documentation = "https://github.com/jmiaie/ompa#readme"
"Bug Tracker" = "https://github.com/jmiaie/ompa/issues"

[project.scripts]
ao = "ompa.cli:main"
ao-mcp = "ompa.mcp_server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ompa*"]
exclude = ["tests*", "agent_memory*"]
